@@ -7,6 +7,7 @@
 - Re-enable main GUI before showing hotseat AI replay
 - Prevent music from being reset during hotseat AI replay
 - Update UI after stack bombarding (fixes bombard button not disappearing for multi-move units w/o blitz)
+- Fix crash caused by previous fix for incorrect ETAs w/ limited railroad movement
 
 * RELEASE 16 PREVIEW 1
 - Barbarian city capture & production (experimental)
